deployment-test-app.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    run: test-app
  name: test-app
  namespace: mynamespace
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      run: test-app
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      labels:
        run: test-app
    spec:
      containers:
      - image: 172.30.1.1:5000/mynamespace/test-app:1.1.0
        imagePullPolicy: IfNotPresent
        name: test-app
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
