svc-haproxy-exporter-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: haproxy-exporter
  name: haproxy-exporter-service
  namespace: default
spec:
  ports:
  - name: metrics
    port: 9144
    protocol: TCP
    targetPort: 9144
  - name: log-tcp
    port: 514
    protocol: TCP
    targetPort: 514
  - name: log-udp
    port: 514
    protocol: UDP
    targetPort: 514
  selector:
    run: haproxy-exporter
  sessionAffinity: None
  type: ClusterIP
