svc-test-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: test-app
  name: test-app
  namespace: mynamespace
spec:
  clusterIP: 172.30.254.3
  externalIPs:
  - 172.29.192.241
  externalTrafficPolicy: Cluster
  ports:
  - nodePort: 30534
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    run: test-app
  sessionAffinity: None
  type: LoadBalancer
